--- a/index.html
+++ b/index.html
@@ -32,22 +32,23 @@
             <div class="text">
                 <p>Hi it`s </p>
                 <h1><span>M</span>osab <span>A</span>rbab</h1>
-                <button>learn more</button>
+                <a href="#about"><button>learn more</button></a>
             </div>
             
             <div class="img">
-                <img src="./img/Gemini_Generated_Image_mdeviqmdeviqmdev-removebg-preview.png" alt="my img">
+                <img src="./img/Gemini_Generated_Image_mdeviqmdeviqmdev-removebg-preview-removebg-preview.png" alt="my img">
             </div>
         </div>
-
-        <div class="About" id="about">
+ 
+        <div class="about1">
             
+        <div class="About" id="about">
             <div class="text">
                 <h3>About me</h3>
                 <h1><span>M</span>osab <span>A</span>rbab</h1>
                 <p>
                     My Name Mosab Arbab Iam 24years
-                    Old From Sudan. <br>I am UI UX DEVELOPER and love creating simple designs
+                    Old From Sudan. <br>I am UIUX designer and  Web DEVELOPER and love creating simple designs
                 </p>
                 <div class="icon">
                     <a href="#"><i class="fa-brands fa-square-linkedin"></i></a>
@@ -56,25 +57,26 @@
                 </div>
             </div>
             <div class="img">
-                <img src="./img/Gemini_Generated_Image_mdeviqmdeviqmdev-removebg-preview.png" alt="my img">
+                <img src="./img/Gemini_Generated_Image_mdeviqmdeviqmdev-removebg-preview-removebg-preview.png" alt="my img">
             </div>
+        </div>
         </div>
 
         <div class="services">
-            <h3>Lorem, ipsum.</h3>
+            <h3>Services</h3>
             <div class="services2">
            <div class="s1">
-              <img src="./img/Gemini_Generated_Image_mdeviqmdeviqmdev-removebg-preview.png" alt="">
+              <img src="./img/Gemini_Generated_Image_mdeviqmdeviqmdev-removebg-preview-removebg-preview.png" alt="">
                  <h4>Lorem, ipsum.</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
            </div>
            <div class="s2">
-               <img src="./img/Gemini_Generated_Image_mdeviqmdeviqmdev-removebg-preview.png" alt="">
+               <img src="./img/Gemini_Generated_Image_mdeviqmdeviqmdev-removebg-preview-removebg-preview.png" alt="">
                  <h4>Lorem, ipsum.</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
            </div>
            <div class="s3">
-               <img src="./img/Gemini_Generated_Image_mdeviqmdeviqmdev-removebg-preview.png" alt="">
+               <img src="./img/Gemini_Generated_Image_mdeviqmdeviqmdev-removebg-preview-removebg-preview.png" alt="">
                  <h4>Lorem, ipsum.</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
            </div>
@@ -98,8 +100,10 @@
                 </div>
           </div>
         </div>
-    </div>
 
+        <div>
+
+        </div>
     </div>
 </body>
 
