--- a/login.html
+++ b/login.html
@@ -5,53 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
     <style>
-        body{
-            background-color:rgb(3, 122, 190) ;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .login{
-            background-color: aliceblue;
-            padding: 30px;
-            border-radius: 2px;
-            width: 320px;
-            text-align: center;
-            box-shadow: 0 6px 20px rgb(51, 51, 51);
-        }
-        .login h3{
-            margin-bottom: 25px;
-            font-size: 25px;
-        }
-        .login input{
-            width: 90%;
-            margin: 3%;
-            padding: 6px;
-            border: 1px solid slategray;
-            border-radius: 3px;
-            font-size: 15px;
-        }
-        .login button{
-            background-color: rgb(0, 125, 241);
-            width: 50%;
-            padding: 5px;
-            border: 1px solid rgb(3, 122, 190);
-            border-radius: 4px;
-        } .login button:hover{
-            color: rgb(238, 245, 245);
-            background-color: rgba(0, 62, 233, 0.973);
-        }
-        .login p{
-            font-size: 14px;
-            font-family:fantasy;
-        }
-        .login a:hover{
-            color: blue;
-        }
+.container{
+   background-color:rgb(3, 122, 190) ;
+    display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
+}
+.navbar{
+  display: flex;
+  justify-content: center;
+  gap: 10%;
+  background-color: #007BFF;
+  padding: 2%;
+}
+.navbar li{
+    list-style: none;
+}
+.navbar li a{
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-size: 25px;
+  font-weight: bold;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+    
+.login{
+    background-color: aliceblue;
+    padding: 30px;
+    border-radius: 2px;
+    width: 320px;
+    text-align: center;
+    box-shadow: 0 6px 20px rgb(51, 51, 51);
+}
+.login h3{
+    margin-bottom: 25px;
+    font-size: 25px;
+}
+.login input{
+    width: 90%;
+    margin: 3%;
+    padding: 6px;
+    border: 1px solid slategray;
+    border-radius: 3px;
+    font-size: 15px;
+}
+.login button{
+    background-color: rgb(0, 125, 241);
+    width: 50%;
+    padding: 5px;
+    border: 1px solid rgb(3, 122, 190);
+    border-radius: 4px;
+} .login button:hover{
+    color: rgb(238, 245, 245);
+    background-color: rgba(0, 62, 233, 0.973);
+}
+.login p{
+    font-size: 14px;
+    font-family:fantasy;
+}
+.login a:hover{
+    color: blue;
+}
     </style>
 </head>
 <body>
+     <nav class="navbar">
+
+        <li><a href="index.html">Home</a></li></li>
+          
+    </nav>
+
+    <div class="container">
     <div class="login" id="login.html">
         <h3>Login</h3>
         <div></div>
@@ -64,6 +89,7 @@
             <button type="button">Enter</button>
         </form>
          <p>I hane account?<a href="sign.html">Cearte account</a></p>
+    </div>
     </div>
 </body>
 </html>
