--- a/sign.html
+++ b/sign.html
@@ -4,13 +4,33 @@
   <meta charset="UTF-8">
   <title>Sign Up</title>
   <style>
-    body {
-      background:  rgb(0, 125, 241);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
+.container{
+  background:  rgb(0, 125, 241);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh
+}
+
+.navbar{
+  display: flex;
+  justify-content: center;
+  gap: 10%;
+  background-color:rgb(0, 113, 165);
+  padding: 2%;
+}
+
+.navbar li{
+    list-style: none;
+}
+
+.navbar li a{
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-size: 25px;
+  font-weight: bold;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 
     .signup {
       background:rgb(243, 244, 245);
@@ -48,7 +68,7 @@
     }
 
     .signup button:hover {
-      background: #1e7e34;
+      background:rgb(0, 146, 0);
     }
 
     .signup p {
@@ -62,6 +82,11 @@
   </style>
 </head>
 <body>
+   <nav class="navbar">
+        <li><a href="index.html">Home</a></li></li>
+    </nav>
+
+    <div class="container">
   <div class="signup">
     <h2>Cearte New Account</h2>
     <form>
@@ -76,6 +101,7 @@
       <button type="submit">Sign Up</button>
     </form>
     <p>Already have an account? <a href="login.html">Login here</a></p>
+  </div>
   </div>
 </body>
 </html>
