--- a/bolg.html
+++ b/bolg.html
@@ -91,7 +91,7 @@
       <p>Starting programming can be exciting but also overwhelming. The key is to begin with the basics. 
       Start learning a simple programming language like Python or JavaScript. Practice daily, work on small projects, 
       and gradually challenge yourself with more complex tasks. Remember, consistency is more important than speed.</p>
-      <a href="#">Read More</a>
+      <a href="https://www.geeksforgeeks.org/blogs/how-to-learn-programming/">Read More</a>
     </div>
 
     <div class="text">
@@ -99,7 +99,8 @@
       <p>If you want to learn web development, several websites can help you start for free. Some popular choices include: 
       <strong>W3Schools</strong>, <strong>MDN Web Docs</strong>, and <strong>freeCodeCamp</strong>. These sites provide tutorials, 
       exercises, and examples that make learning interactive and easy to understand.</p>
-      <a href="#">Read More</a>
+      <a href="https://www.w3schools.com/
+      ">Read More</a>
     </div>
   </div>
 
