--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <title>lcok app</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
@@ -15,7 +15,7 @@
     <nav class="navbar">
 
         <li><a href="#home">Home</a></li>
-        <li><a href="#about">Aboutus</a></li>
+        <li><a href="#about">Aboutme</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#project">Porject</a></li>
@@ -31,7 +31,7 @@
         <div class="home" id="home">
             <div class="text">
                 <p>Hi it`s </p>
-                <h1><span>M</span>osab <span>A</span>rbab</h1>
+                <h1><span>M</span>osab <span>A</span>rbab <br>  &nbsp;&nbsp Web Developer</h1>
                 <a href="#about"><button>learn more</button></a>
             </div>
 
@@ -42,7 +42,7 @@
         </div>
 
         <div class="about1">
-
+           
             <div class="About" id="about">
                 <div class="text">
                     
@@ -68,9 +68,7 @@
         </div>
 
         <div class="services" id="services">
-
             <div class="services2">
-
                 <div class="s1">
                     <img src="./img/677d3e96-e0af-4f0d-94a9-7a71190f86ac.jpeg" alt="">
                     <h4>Front end</h4>
