--- a/bolg.html
+++ b/bolg.html
@@ -5,34 +5,48 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: rgb(236, 230, 230);
+      background: rgb(3, 122, 190);
     }
-
     .navbar{
-      display: flex;
-      justify-content: center;
-      gap: 10%;
-      background-color:rgb(0, 113, 219);
-      padding: 2%;
-      border-radius: 5px;
-    }
-    .navbar li{
-      list-style: none;
-    }
-    .navbar li a{
-      text-decoration: none;
-      color: rgb(0, 0, 0);
-      font-size: 25px;
-      font-weight: bold;
-      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    }
-    .navbar button{
-      
-      background-color: rgb(0, 0, 0);
-      padding: 7px;
-      color:white;
-      border-radius: 8px;
-    }
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    padding-right: 10%;
+    border-radius: 10px;
+}
+.navbar li{
+    list-style: none;    
+}
+.navbar li a:hover{
+    color: rgb(255, 255, 255);
+    font-size: 25px;
+    transition: 1s;
+    text-shadow: 0 10px 10px black;
+}
+.navbar li a{
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    margin-right: 25px;
+    text-decoration: none;
+}
+.navbar button{
+    background-color: rgb(0, 174, 255);;
+    color: white;
+    padding: 8px;
+    border-radius: 10px;
+    border: 1px solid white;
+}
+.navbar button:hover{
+    background-color: rgb(0, 67, 250);
+    transition: 1s;
+    box-shadow: 0 1px 10px black;
+    padding-left:  10px;
+    padding-right: 10px;
+}
     header {
       
       color: black;
@@ -54,7 +68,7 @@
       margin-bottom: 20px;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 10px 10px rgb(20, 20, 20);
     }
 
     .text p {
@@ -74,15 +88,23 @@
   </style>
 </head>
 <body>
-  <nav class="navbar">
+<nav class="navbar">
 
-        <li><a href="index.html">Home</a></li></li>
+        <li><a href="index.html#home">Home</a></li>
+        <li><a href="index.html#about">Aboutme</a></li>
+        <li><a href="index.html#services">Services</a></li>
+        <li><a href="index.html#skills">Skills</a></li>
+        <li><a href="index.html#project">Porject</a></li>
+        <li><a href="index.html#Contact">Contact</a></li>
+        <li><a href="bolg.html">Blog</a></li>
+        <div class="button">
             <a href="login.html"><button>Log in</button></a>
             <a href="sign.html"><button>Sign Up</button></a>
+        </div>
     </nav>
   <header>
     <h1>My Blog</h1>
-    <p>Welcome to my simple blog page</p>
+    <p>Welcome to my blog</p>
   </header>
 
   <div class="container">
