--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
                 <div class="pro4">
                     <img src="./img/Screenshot from 2025-09-25 12-26-46.png" alt="">
-                    <h4>proflie</h4>
+                    <h4>profile</h4>
                     <p>A personal landing page designed to display your name, and profile picture.
                         It includes navigation links and a get started button to attract clients or visitors.
                         It also showses the companies you've worked with.</p>
