--- a/sign.html
+++ b/sign.html
@@ -109,12 +109,12 @@
 <body>
     <nav class="navbar">
 
-        <li><a href="#home">Home</a></li>
-        <li><a href="index.html">Aboutme</a></li>
-        <li><a href="index.html">Services</a></li>
-        <li><a href="index.html">Skills</a></li>
-        <li><a href="index.html">Project</a></li>
-        <li><a href="index.html">Contact</a></li>
+        <li><a href="index.html#home">Home</a></li>
+        <li><a href="index.html#about">Aboutme</a></li>
+        <li><a href="index.html#services">Services</a></li>
+        <li><a href="index.html#skills">Skills</a></li>
+        <li><a href="index.html#project">Project</a></li>
+        <li><a href="index.html#Contact">Contact</a></li>
         <li><a href="bolg.html">Blog</a></li>
         <div class="button">
             <a href="login.html"><button>Log in</button></a>
