--- a/sign.html
+++ b/sign.html
@@ -47,11 +47,12 @@
     border-radius: 5px;
 }
 .navbar button:hover{
-    background-color: black;
+    background-color: rgb(0, 60, 255);
     color: white;
     transition:1s;
     padding-left: 10px;
     padding-right: 10px;
+    box-shadow: 0 8px 8px black;
 }
 .button{
     align-items: self-start;
