--- a/login.html
+++ b/login.html
@@ -49,10 +49,11 @@
     
 }
 .navbar button:hover{
-     background-color: black;
+     background-color: rgb(2, 48, 255);
      box-shadow: 0 6px 10px black;
      transition: 1s;
-     padding: 10px;
+     padding-left: 10px;
+     padding-right: 10px;
 }
     
 .login{
