--- a/sign.html
+++ b/sign.html
@@ -1,68 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Sign Up</title>
   <style>
-.container{
-  background:  rgb(0, 125, 241);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh
-}
+    .container {
+      background: rgb(0, 125, 241);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh
+    }
 
-.navbar{
-    display: flex;
-    padding: 20px;
-    align-items: center;
-    justify-content: space-between;
-    font-family:sans-serif;
-    padding-right: 10%;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    background-color:  rgb(3, 122, 190);;
-}
-.navbar li{
-    list-style: none;    
-}
-.navbar li a:hover{
-    color: rgb(255, 255, 255);
-    font-size: 24px;
-    transition: 1s;
-    text-shadow: 0 15px 10px black;
-}
-.navbar li a{
-    font-size: 16px;
-    font-weight: bold;
-    color: rgb(0, 0, 0);
-    margin-right: 17px;
-    text-decoration: none;
-}
-.navbar button{
-    background-color: rgb(3, 122, 190);
-    color: white;
-    padding: 8px;
-    border: 1px solid white;
-    border-radius: 5px;
-}
-.navbar button:hover{
-    background-color: rgb(0, 60, 255);
-    color: white;
-    transition:1s;
-    padding-left: 10px;
-    padding-right: 10px;
-    box-shadow: 0 8px 8px black;
-}
-.button{
-    align-items: self-start;
-}
-    
+    .navbar {
+      display: flex;
+      padding: 20px;
+      align-items: center;
+      justify-content: space-between;
+      font-family: sans-serif;
+      padding-right: 10%;
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+      background-color: rgb(3, 122, 190);
+      ;
+    }
+
+    .navbar li {
+      list-style: none;
+    }
+
+    .navbar li a:hover {
+      color: rgb(255, 255, 255);
+      font-size: 24px;
+      transition: 1s;
+      text-shadow: 0 15px 10px black;
+    }
+
+    .navbar li a {
+      font-size: 16px;
+      font-weight: bold;
+      color: rgb(0, 0, 0);
+      margin-right: 17px;
+      text-decoration: none;
+    }
+
+    .navbar button {
+      background-color: rgb(3, 122, 190);
+      color: white;
+      padding: 8px;
+      border: 1px solid white;
+      border-radius: 5px;
+    }
+
+    .navbar button:hover {
+      background-color: rgb(0, 60, 255);
+      color: white;
+      transition: 1s;
+      padding-left: 10px;
+      padding-right: 10px;
+      box-shadow: 0 8px 8px black;
+    }
+
+    .button {
+      align-items: self-start;
+    }
+
     .signup {
-      background:rgb(243, 244, 245);
+      background: rgb(243, 244, 245);
       padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
       width: 500px;
       text-align: center;
       box-shadow: 0 8px 14px black;
@@ -84,7 +92,7 @@
     .signup button {
       width: 50%;
       padding: 10px;
-      background:  rgb(0, 125, 241);
+      background: rgb(0, 125, 241);
       color: white;
       border: 1px solid white;
       border-radius: 8px;
@@ -94,7 +102,7 @@
     }
 
     .signup button:hover {
-      background:rgb(0, 146, 0);
+      background: rgb(0, 146, 0);
     }
 
     .signup p {
@@ -107,38 +115,41 @@
     }
   </style>
 </head>
+
 <body>
-    <nav class="navbar">
+  <nav class="navbar">
 
-        <li><a href="index.html#home">Home</a></li>
-        <li><a href="index.html#about">Aboutme</a></li>
-        <li><a href="index.html#services">Services</a></li>
-        <li><a href="index.html#skills">Skills</a></li>
-        <li><a href="index.html#project">Project</a></li>
-        <li><a href="index.html#Contact">Contact</a></li>
-        <li><a href="bolg.html">Blog</a></li>
-        <div class="button">
-            <a href="login.html"><button>Log in</button></a>
-            <a href="sign.html"><button>Sign Up</button></a>
-        </div>
-    </nav>
+    <li><a href="index.html#home">Home</a></li>
+    <li><a href="index.html#about">Aboutme</a></li>
+    <li><a href="index.html#services">Services</a></li>
+    <li><a href="index.html#skills">Skills</a></li>
+    <li><a href="index.html#project">Project</a></li>
+    <li><a href="index.html#Contact">Contact</a></li>
+    <li><a href="bolg.html">Blog</a></li>
+    <div class="button">
+      <a href="login.html"><button>Log in</button></a>
+      <a href="sign.html"><button>Sign Up</button></a>
+    </div>
+  </nav>
 
-    <div class="container">
-  <div class="signup">
-    <h2>Create New Account</h2>
-    <form>
-      <input type="text" placeholder="Full Name" required>
+  <div class="container">
+    <div class="signup">
+      <h2>Create New Account</h2>
+      <form>
+        <input type="text" placeholder="Full Name" required>
 
-      <input type="email" placeholder="Email" required>
+        <input type="email" placeholder="Email" required>
 
-      <input type="password" placeholder="Password" required>
+        <input type="password" placeholder="Password" required>
 
-      <input type="password" placeholder="Confirm Password" required>
+        <input type="password" placeholder="Confirm Password" required>
 
-      <button type="submit">Sign Up</button>
-    </form>
-    <p>Already have an account? <a href="login.html">Login here</a></p>
-  </div>
+        <button type="submit">Sign Up</button>
+      </form>
+      <p>Already have an account? <a href="login.html">Login here</a></p>
+    </div>
+
   </div>
 </body>
+
 </html>
