--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
 
                 <div class="pro1">
                     <img src="./img/chocolet.png" alt="">
-                    <h4>Chocolate shop</h4>
+                    <h4>Cake shop</h4>
                     <p>As part of my UX/UI learning journey, I created this prototype for ordering chocolates in Figma.
                         The goal was to practice designing a food delivery app that looked simple, modern, and easy to
                         use.</p>
                     <a
-                        href="https://www.figma.com/proto/kTjfIJMD3shNhtILiYVs4S/Untitled?node-id=11-61&p=f&t=HCZQBnpsgPJzNz5r-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=10%3A8">lesrn
+                        href=https://www.figma.com/proto/kTjfIJMD3shNhtILiYVs4S/Untitled?node-id=11-3&t=2Fmuq7sWZLOwQ7h2-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=10%3A8">lesrn
                         more</a>
                 </div>
 
@@ -159,7 +159,7 @@
                 <p><i class="fa-solid fa-envelope"></i>:<a href="milto:c94924161@gmail.com">c94924161@gmail.com</a>
                 </p>
                 <div class="icon">
-                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="https://www.facebook.com/mosabarbababdo"><i class="fa-brands fa-square-facebook"></i></a>
                     <a
                         href="https://www.linkedin.com/in/mosab-arbab-863045354?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
                             class="fa-brands fa-linkedin"></i></a>
