--- a/bolg.html
+++ b/bolg.html
@@ -7,15 +7,18 @@
       font-family: Arial, sans-serif;
       background: rgb(3, 122, 190);
     }
-    .navbar{
+  .navbar {
+    position: fixed;
     display: flex;
+    justify-content: center; 
+    align-items: center;     
     padding: 20px;
-    align-items: center;
-    justify-content: space-between;
     font-size: 10px;
-    font-family: 'Courier New', Courier, monospace;
-    padding-right: 10%;
+    font-family:sans-serif;
     border-radius: 10px;
+    width: 100%;   
+    gap: 30px;          
+    top: 0;                   
 }
 .navbar li{
     list-style: none;    
@@ -27,10 +30,9 @@
     text-shadow: 0 10px 10px black;
 }
 .navbar li a{
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
     color: rgb(0, 0, 0);
-    margin-right: 25px;
     text-decoration: none;
 }
 .navbar button{
@@ -54,13 +56,9 @@
       text-align: center;
     }
 
-    header h1 {
-      margin: 0;
-    }
-
     .container {
       width: 90%;
-      margin: 20px auto;
+      margin: auto;
     }
 
     .text {
@@ -113,7 +111,7 @@
       <p>Starting programming can be exciting but also overwhelming. The key is to begin with the basics. 
       Start learning a simple programming language like Python or JavaScript. Practice daily, work on small projects, 
       and gradually challenge yourself with more complex tasks. Remember, consistency is more important than speed.</p>
-      <a href="https://www.geeksforgeeks.org/blogs/how-to-learn-programming/">Read More</a>
+      <a href="https://daily.dev/blog/how-to-start-coding-from-zero-finding-your-coding-community">Read More</a>
     </div>
 
     <div class="text">
