--- a/sign.html
+++ b/sign.html
@@ -5,114 +5,114 @@
   <meta charset="UTF-8">
   <title>Sign Up</title>
   <style>
-    .container {
-      background: rgb(0, 125, 241);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh
+.container {
+  background: rgb(0, 125, 241);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh
+}
+
+ .navbar { 
+  position: fixed;
+  display: flex;
+  justify-content: center; 
+  align-items: center;     
+  padding: 20px;
+  font-size: 10px;
+  font-family:sans-serif;
+  border-radius: 10px;
+  width: 100%; 
+  gap: 30px;            
+  top: 0;                   
+}
+
+
+.navbar li {
+  list-style: none;
+}
+
+   .navbar li a {
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+.navbar li a:hover {
+  color: rgb(255, 255, 255);
+  font-size: 24px;
+  transition: 1s;
+  text-shadow: 0 15px 10px black;
+}
+
+.navbar button {
+  background-color: rgb(3, 122, 190);
+  color: white;
+  padding: 8px;
+  border: 1px solid white;
+  border-radius: 10px;
+}
+
+.navbar button:hover {
+  background-color: rgb(0, 60, 255);
+  color: white;
+  transition: 1s;
+  padding-left: 10px;
+  padding-right: 10px;
+  box-shadow: 0 8px 8px black;
     }
 
-    .navbar {
-      display: flex;
-      padding: 20px;
-      align-items: center;
-      justify-content: space-between;
-      font-family: sans-serif;
-      padding-right: 10%;
-      border-top-left-radius: 8px;
-      border-top-right-radius: 8px;
-      background-color: rgb(3, 122, 190);
-      ;
-    }
+.button {
+  align-items: self-start;
+}
 
-    .navbar li {
-      list-style: none;
-    }
+.signup {
+  background: rgb(243, 244, 245);
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  width: 500px;
+  text-align: center;
+  box-shadow: 0 8px 14px black;
+}
 
-    .navbar li a:hover {
-      color: rgb(255, 255, 255);
-      font-size: 24px;
-      transition: 1s;
-      text-shadow: 0 15px 10px black;
-    }
+.signup h2 {
+  margin-bottom: 15px;
+}
 
-    .navbar li a {
-      font-size: 16px;
-      font-weight: bold;
-      color: rgb(0, 0, 0);
-      margin-right: 17px;
-      text-decoration: none;
-    }
+.signup input {
+  width: 80%;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid rgb(192, 187, 187);
+  border-radius: 6px;
+  font-size: 15px;
+}
 
-    .navbar button {
-      background-color: rgb(3, 122, 190);
-      color: white;
-      padding: 8px;
-      border: 1px solid white;
-      border-radius: 5px;
-    }
+.signup button {
+  width: 50%;
+  padding: 10px;
+  background: rgb(0, 125, 241);
+  color: white;
+  border: 1px solid white;
+  border-radius: 8px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: 0.7s;
+}
 
-    .navbar button:hover {
-      background-color: rgb(0, 60, 255);
-      color: white;
-      transition: 1s;
-      padding-left: 10px;
-      padding-right: 10px;
-      box-shadow: 0 8px 8px black;
-    }
+.signup button:hover {
+  background: rgb(0, 146, 0);
+}
 
-    .button {
-      align-items: self-start;
-    }
+.signup p {
+  margin-top: 15px;
+  font-size: 15px;
+}
 
-    .signup {
-      background: rgb(243, 244, 245);
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-      width: 500px;
-      text-align: center;
-      box-shadow: 0 8px 14px black;
-    }
-
-    .signup h2 {
-      margin-bottom: 15px;
-    }
-
-    .signup input {
-      width: 80%;
-      padding: 10px;
-      margin: 10px;
-      border: 1px solid rgb(192, 187, 187);
-      border-radius: 6px;
-      font-size: 15px;
-    }
-
-    .signup button {
-      width: 50%;
-      padding: 10px;
-      background: rgb(0, 125, 241);
-      color: white;
-      border: 1px solid white;
-      border-radius: 8px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: 0.7s;
-    }
-
-    .signup button:hover {
-      background: rgb(0, 146, 0);
-    }
-
-    .signup p {
-      margin-top: 15px;
-      font-size: 15px;
-    }
-
-    .signup a {
-      color: rgb(30, 30, 243);
-    }
+.signup a {
+  color: rgb(30, 30, 243);
+}
   </style>
 </head>
 
