--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                 <div class="card">
                   <img src="./img/1e4c1738-0550-4550-a64b-3aaccf21df1f.jpeg" alt="">
                     <h3>Back end</h3>
-                    <p>Manage servers databases, and appliction logic to make everything work smoothly.</p>
+                    <p>Manage servers databases, and  make everything work smoothly.</p>
                 </div>
 
                 <div class="card">
                      <img src="./img/53d788fb-7e32-431e-8fe5-09f7d48ffb00.jpeg" alt="">
                     <h3> Ui UX </h3>
-                    <p>Design user-friendily layouts, choose colors and stles,and impeove how users interact with the
+                    <p>Design user-friendily layouts, choose colors and styles,and impeove how users interact with the web
                         product</p>
                 </div>
             </div>
@@ -186,17 +186,10 @@
 
         <!-- Footer -->
         <footer>
-            <p>© 2025 - Mosab Arbab</p>
+           
         </footer>
     </div>
 
-    <!-- Script -->
-    <script>
-        const toggle = document.getElementById('menu-toggle');
-        document.querySelectorAll('.nav-menu a').forEach(link => {
-            link.addEventListener('click', () => { if (toggle.checked) toggle.checked = false; });
-        });
-    </script>
 </body>
 
 </html>
