--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="about">
             <h3>About Me</h3>
             <div class="about2">
-            <p> Web Developer and UI UX Designer. <br>
+            <p> my name is mosab arabab i`m 24, Web Developer and UI UX Designer. <br>
                         I create simple and modern websites using HTML, CSS.<br>
                         My work focuses on clean design, responsive pages, and easy <br>user experience.
                         I enjoy turning ideas into real websites.
