--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                         I create simple and modern websites using HTML, CSS.<br>
                         My work focuses on clean design, responsive pages, and easy <br>user experience.
                         I enjoy turning ideas into real websites.
-             <br> <a href=""><i class="fa-brands fa-facebook"></i></a>
-              <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-              <a href=""><i class="fa-brands fa-github"></i></a>
+             <br> <a href="https://www.facebook.com/mosabarbababdo"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://www.linkedin.com/in/mosab-arbab-863045354?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="https://mosabarbab.github.io/project/sign.html"><i class="fa-brands fa-github"></i></a>
             </p>
             <img src="./img/Gemini_Generated_Image_mdeviqmdeviqmdev-removebg-preview-removebg-preview.png" alt="">
             </div>
