--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 </head>
 
 <body>
-    <nav class="navbar">
+ <nav class="navbar">
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="hamburger"><span></span><span></span><span></span></label>
 
         <ul class="nav-menu">
-            <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="#about" class="nav-link">About Me</a></li>
-            <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
-            <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-            <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-            <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="index.html#home" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="index.html#about" class="nav-link">About Me</a></li>
+            <li class="nav-item"><a href="index.html#services" class="nav-link">Services</a></li>
+            <li class="nav-item"><a href="index.html#skills" class="nav-link">Skills</a></li>
+            <li class="nav-item"><a href="index.html#projects" class="nav-link">Projects</a></li>
+            <li class="nav-item"><a href="index.html#contact" class="nav-link">Contact</a></li>
             <li class="nav-item"><a href="bolg.html" class="nav-link">Blog</a></li>
             <li class="nav-item nav-buttons">
                 <a href="login.html" class="nav-button">Log in</a>
